<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_index_python</name>
  <version>0.0.0</version>
  <description>
    Python API to access the ament resource index.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>python3-setuptools</build_depend>

  <buildtool_depend>python3</buildtool_depend>

  <buildtool_export_depend>python3</buildtool_export_depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_pep8</test_depend>
  <test_depend>ament_pyflakes</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
